# Basis_Info

./: .gitignore  README.md
backEnd/agentic/: README.md  __init__.py  pyproject.toml
backEnd/agentic/agents/: __init__.py  asset_agent.py  base_agent.py  cost_agent.py  object_agent.py  room_agent.py  takeoff_agent.py  vision_agent.py
backEnd/agentic/agents/appraisal/: README.md  __init__.py  corrector_agent.py  extractor_agent.py  orchestrator.py  schemas.py  tools.py  verifier_agent.py
backEnd/agentic/api/: __init__.py  main.py
backEnd/agentic/api/routes/: __init__.py  health.py  workflow.py
backEnd/agentic/config/: __init__.py  llm_providers.py  settings.py
backEnd/agentic/firestore/: __init__.py  checkpointer.py  client.py  schemas.py  writeback.py
backEnd/agentic/graph/: __init__.py  edges.py  nodes.py  state.py  workflow.py
backEnd/agentic/mcp_server/: __init__.py  schemas.py  server.py
backEnd/agentic/mcp_server/tools/: __init__.py  fetch_tools.py  search_tools.py
backEnd/agentic/observability/: __init__.py  tracing.py
backEnd/agentic/tests/: __init__.py  test_agents.py  test_config.py  test_mcp_server.py
backEnd/agentic/utils/: __init__.py  parallel.py
backEnd/evidence_layer/: README.md  __init__.py  ingest_docs.py  pyproject.toml  requirements.txt
backEnd/evidence_layer/cli/: __init__.py  __main__.py
backEnd/evidence_layer/scripts/: __init__.py  upload_to_gcs.py
backEnd/evidence_layer/src/: __init__.py  build_bm25.py  build_faiss.py  chunk_text.py  extract_fields.py  extract_tables.py  gcs_loader.py  ingest.py  manifest.py  map_appraisal_sections.py  parse_pdf.py  retrieval.py  tokenizers.py
backEnd/evidence_layer/src/schemas/: __init__.py  chunk.py  element.py  table.py
backEnd/evidence_layer/src/tiered_extraction/: __init__.py  azure_di_extractor.py  confidence.py  extractor.py  field_mappings.py  mismo_parser.py  validation.py  vision_fallback.py
backEnd/evidence_layer/tests/: __init__.py  test_tokenizers.py
backEnd/vision_layer/: README.md  pyproject.toml
backEnd/vision_layer/mcp_tools/: __init__.py  vision_tools.py
backEnd/vision_layer/src/: __init__.py
backEnd/vision_layer/src/api_clients/: __init__.py  base.py  grounding_dino.py  sam2.py  vlm.py
backEnd/vision_layer/src/config/: __init__.py  settings.py  vlm_providers.py
backEnd/vision_layer/src/evidence/: __init__.py  artifact_store.py  correction_store.py  review_router.py
backEnd/vision_layer/src/pipeline/: __init__.py  cropper.py  ingest.py
backEnd/vision_layer/src/schemas/: __init__.py  artifact.py  detection.py  scene.py
backEnd/vision_layer/src/validation/: __init__.py  consistency.py  grounding_verifier.py
backEnd/vision_layer/tests/: __init__.py  test_detection.py  test_validation.py
frontend/: .gitignore  README.md  eslint.config.mjs  next.config.js  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts
frontend/scripts/: migrate-to-sqlite.ts
frontend/src/api/: room-classification.api.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: FilePreview.tsx  FilePreviewModal.tsx  GoogleLoginButton.tsx  Header.tsx  LogoutButton.tsx  ProtectedRoute.tsx  Sidebar.tsx  StudyBackButton.tsx  UserSync.tsx
frontend/src/config/: classification-wizard.ts  constants.ts  env.ts
frontend/src/contexts/: AppContext.tsx  AuthContext.tsx
frontend/src/errors/: error-handler.ts  error-types.ts
frontend/src/hooks/: useAssetVerification.ts  useAssets.ts  useDebounce.ts  useFileAssociation.ts  useFileFilter.ts  usePolling.ts  useProgressAnimation.ts  useRoomClassifier.ts  useStudy.ts  useStudyNavigation.ts  useTakeoffFilters.ts  useTakeoffSorting.ts  useTakeoffs.ts  useWorkflow.ts
frontend/src/lib/: compat.ts  firebase.ts  firestore.ts  logger.ts  migrations.ts  mockAuth.ts  mockData.ts  mockFirestore.ts  mockStorage.ts  storage.firebase.ts  storage.mock.ts  storage.ts  types.ts
(+75 files in other folders)
