[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "basis-agentic"
version = "0.1.0"
description = "Agentic workflow layer for Basis cost segregation platform"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Basis Team" }
]

dependencies = [
    # LangChain ecosystem
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "langsmith>=0.1.0",

    # MCP for tool connectivity
    "mcp>=1.0.0",

    # Firebase
    "firebase-admin>=6.0.0",

    # API
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",

    # Data validation
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",

    # Evidence layer (local dependency)
    # Installed via: pip install -e ../evidence_layer
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
